# sastadev

./: .flake8  .gitignore  .readthedocs.yaml  ASTApostfunctions.py  CHAT_Annotation.py  README.md  SAFreader.py  Sziplus.py  TARSPpostfunctions.py  TARSPscreening.py  allresults.py  allresults.py___jb_tmp___  alpino.py  alpinoparsing.py  asta_neo.py  asta_queries.py  astaforms.py  basicreplacements.py  celexlexicon.py  chatundo.py  checkcorrection.py  cleanCHILDEStokens.py  compounds.py  config.py  corrector.py  corrector.py___jb_tmp___  correcttreebank.py  dataconfig.py  dedup.py  default_config.py  deregularise.py  external_functions.py  external_functions.py___jb_tmp___  find_ngram.py  generatemacros.py  generatemacros.py___jb_tmp___  gitremote.bat  goldcountreader.py  iedims.py  iedims_test.py  (+57 more)
Documentation/: Tarsp.rst  alpinoparser.rst  asta.rst  auxiliarymodules.rst  conf.py  deviantlanguage.rst  index.rst  introduction.rst  lexicons.rst  methodimplementation.rst  methods.rst  references.rst  sastaanddev.rst  stap.rst
docs/: Tarsp.rst  asta.rst  conf.py  deviantlanguage.rst  introduction.rst  lexicons.rst  sastaanddev.rst  smallclausetable.csv
macros/: newimperatives.txt  sastamacros1.txt  sastamacros2.txt
methods/: ASTA Index Current.xlsx  STAP_Index_Current.xlsx  TARSP Index 2022-01-07.xlsx  TARSP Index Current.xlsx  ~$STAP_Index_Current.xlsx
pypi/: .gitignore  config.py  include.txt  prepare.sh
sastadev/: ASTApostfunctions.py  CHAT_Annotation.py  SAFreader.py  STAPpostfunctions.py  Sziplus.py  TARSPpostfunctions.py  TARSPscreening.py  alpino.py  dedup.py  (+42 more)
(+249 files in other folders)
