[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ['setuptools>=43.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.mypy]
python_version =  '3.7'
mypy_path = [
    '$MYPY_CONFIG_FILE_DIR/src/sastadev',
    '$MYPY_CONFIG_FILE_DIR'
]
files = 'src/sastadev'
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    'lxml',
    'xlrd',
    'xslxwriter',
    'openpyxl','xlsx'
    ]
ignore_missing_imports = true